force-app/main/default/objects/HelpDeskMessage__c/HelpDeskMessage__c.object-meta.xml
<CustomObject>
    <label>Help Desk Message</label>
    <nameField>
        <displayFormat>MSG-{0000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Desk Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>