force-app/main/default/objects/HelpDeskMessage__c/fields/AttachmentURL__c.field-meta.xml
<CustomField>
    <fullName>AttachmentURL__c</fullName>
    <label>Attachment URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>