force-app/main/default/objects/HelpDeskMessage__c/fields/AuthorName__c.field-meta.xml
<CustomField>
    <fullName>AuthorName__c</fullName>
    <label>Author Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>