force-app/main/default/objects/HelpDeskMessage__c/fields/AuthorType__c.field-meta.xml
<CustomField>
    <fullName>AuthorType__c</fullName>
    <label>Author Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
                <default>true</default>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>Agente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>