force-app/main/default/objects/HelpDeskMessage__c/fields/CaseCommentId__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentId__c</fullName>
    <description>Id do CaseComment espelhado a partir desta mensagem (ponte HelpDeskMessage__c -&gt; CaseComment/Jira). Usado para dar append das URLs de anexos no comentário sincronizado com o Jira.</description>
    <externalId>true</externalId>
    <label>Case Comment Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>