force-app/main/default/objects/HelpDeskMessage__c/fields/ExternalSource__c.field-meta.xml
<CustomField>
    <fullName>ExternalSource__c</fullName>
    <description>Marcador de origem da mensagem quando criada pela ponte de comentários (ex.: CaseComment Id). Vazio = mensagem nativa do portal. Usado para evitar loop e duplicação na sincronização com CaseComment/Jira.</description>
    <externalId>true</externalId>
    <label>External Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>