force-app/main/default/objects/HelpDeskMessage__c/fields/IsPublic__c.field-meta.xml
<CustomField>
    <fullName>IsPublic__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Public (visible to customer)</label>
    <type>Checkbox</type>
</CustomField>